--- a/LunaTv-config.json
+++ b/LunaTv-config.json
@@ -2,402 +2,402 @@
   "cache_time": 7200,
   "api_site": {
     "aqyzy": {
-      "name": "??°®ÆæÒÕ",
+      "name": "ğŸ¬çˆ±å¥‡è‰º",
       "api": "https://iqiyizyapi.com/api.php/provide/vod",
       "detail": "https://iqiyizyapi.com"
     },
     "caijidb": {
-      "name": "??¶¹°ê×ÊÔ´",
+      "name": "ğŸ¬è±†ç“£èµ„æº",
       "api": "https://caiji.dbzy5.com/api.php/provide/vod",
       "detail": "dbzy.tv"
     },
     "tyyszyapi": {
-      "name": "??ÌìÑÄÓ°ÊÓ",
+      "name": "ğŸ¬å¤©æ¶¯å½±è§†",
       "api": "https://tyyszy.com/api.php/provide/vod",
       "detail": "https://tyyszy.com"
     },
     "ckzy.me": {
-      "name": "??CK×ÊÔ´",
+      "name": "ğŸ¬CKèµ„æº",
       "api": "https://ckzy.me/api.php/provide/vod",
       "detail": "https://ckzy.me"
     },
     "maotaizy": {
-      "name": "??Ã©Ì¨×ÊÔ´",
+      "name": "ğŸ¬èŒ…å°èµ„æº",
       "api": "https://caiji.maotaizy.cc/api.php/provide/vod",
       "detail": "https://mtzy.me"
     },
     "wolong": {
-      "name": "??ÎÔÁú×ÊÔ´",
+      "name": "ğŸ¬å§é¾™èµ„æº",
       "api": "https://wolongzyw.com/api.php/provide/vod",
       "detail": "https://wolongzyw.com"
     },
     "ikun": {
-      "name": "??iKun×ÊÔ´",
+      "name": "ğŸ¬iKunèµ„æº",
       "api": "https://ikunzyapi.com/api.php/provide/vod",
       "detail": "https://ikunzy.com"
     },
     "lzi": {
-      "name": "??Á¿×ÓÓ°ÊÓ",
+      "name": "ğŸ¬é‡å­å½±è§†",
       "api": "https://cj.lziapi.com/api.php/provide/vod",
       "detail": "https://lzizy.net"
     },
     "dyttzy": {
-      "name": "??µçÓ°ÌìÌÃ",
+      "name": "ğŸ¬ç”µå½±å¤©å ‚",
       "api": "http://caiji.dyttzyapi.com/api.php/provide/vod",
       "detail": "http://caiji.dyttzyapi.com"
     },
     "1080y": {
-      "name": "??ÓÅÖÊ×ÊÔ´",
+      "name": "ğŸ¬ä¼˜è´¨èµ„æº",
       "api": "https://api.yzzy-api.com/inc/apijson.php",
       "detail": "https://1080zyk4.com"
     },
     "myzy": {
-      "name": "??Ã¨ÑÛ×ÊÔ´",
+      "name": "ğŸ¬çŒ«çœ¼èµ„æº",
       "api": "https://api.maoyanapi.top/api.php/provide/vod",
       "detail": "https://www.maoyanzy.com"
     },
     "lzcaiji": {
-      "name": "??Á¿×Ó×ÊÔ´",
+      "name": "ğŸ¬é‡å­èµ„æº",
       "api": "https://cj.lzcaiji.com/api.php/provide/vod",
       "detail": "https://cj.lzcaiji.com"
     },
     "ruyi": {
-      "name": "??ÈçÒâ×ÊÔ´",
+      "name": "ğŸ¬å¦‚æ„èµ„æº",
       "api": "https://jjpz.hafrey.dpdns.org/?url=https://cj.rycjapi.com/api.php/provide/vod",
       "detail": "https://www.ryzyw.com"
     },
     "zy360": {
-      "name": "??360×ÊÔ´",
+      "name": "ğŸ¬360èµ„æº",
       "api": "https://360zy.com/api.php/provide/vod",
       "detail": "https://360zy.com"
     },
     "collectwolongzy": {
-      "name": "??ÎÔÁú×ÊÔ´1",
+      "name": "ğŸ¬å§é¾™èµ„æº1",
       "api": "https://collect.wolongzyw.com/api.php/provide/vod",
       "detail": "https://collect.wolongzyw.com"
     },
     "jisu": {
-      "name": "??¼«ËÙ×ÊÔ´",
+      "name": "ğŸ¬æé€Ÿèµ„æº",
       "api": "https://jszyapi.com/api.php/provide/vod",
       "detail": "https://jszyapi.com"
     },
     "mdzy": {
-      "name": "??Ä§¶¼×ÊÔ´",
+      "name": "ğŸ¬é­”éƒ½èµ„æº",
       "api": "https://www.mdzyapi.com/api.php/provide/vod",
       "detail": "https://www.moduzy.net"
     },
     "mozhuazy": {
-      "name": "??Ä§×¦×ÊÔ´",
+      "name": "ğŸ¬é­”çˆªèµ„æº",
       "api": "https://jjpz.hafrey.dpdns.org/?url=https://mozhuazy.com/api.php/provide/vod",
       "detail": "https://mozhuazy.com"
     },
     "ffzy1": {
-      "name": "??·Ç·²×ÊÔ´",
+      "name": "ğŸ¬éå‡¡èµ„æº",
       "api": "https://api.ffzyapi.com/api.php/provide/vod",
       "detail": "https://cj.ffzyapi.com"
     },
     "ffzy": {
-      "name": "??·Ç·²Ó°ÊÓ",
+      "name": "ğŸ¬éå‡¡å½±è§†",
       "api": "https://cj.ffzyapi.com/api.php/provide/vod",
       "detail": "https://cj.ffzyapi.com"
     },
     "bfzy": {
-      "name": "??±©·ç×ÊÔ´",
+      "name": "ğŸ¬æš´é£èµ„æº",
       "api": "https://bfzyapi.com/api.php/provide/vod",
       "detail": "https://bfzy.tv"
     },
     "zuid": {
-      "name": "??×î´ó×ÊÔ´",
+      "name": "ğŸ¬æœ€å¤§èµ„æº",
       "api": "https://api.zuidapi.com/api.php/provide/vod",
       "detail": "zuida.xyz"
     },
     "zuidazy": {
-      "name": "??×î´óµã²¥",
+      "name": "ğŸ¬æœ€å¤§ç‚¹æ’­",
       "api": "https://zuidazy.me/api.php/provide/vod",
       "detail": "https://zuidazy.co"
     },
     "yinghua": {
-      "name": "??Ó£»¨×ÊÔ´",
+      "name": "ğŸ¬æ¨±èŠ±èµ„æº",
       "api": "https://m3u8.apiyhzy.com/api.php/provide/vod",
       "detail": "https://yhzy.cc"
     },
     "wujin": {
-      "name": "??ÎŞ¾¡×ÊÔ´",
+      "name": "ğŸ¬æ— å°½èµ„æº",
       "api": "https://api.wujinapi.me/api.php/provide/vod",
       "detail": "https://wujinzy.com"
     },
     "wujincom": {
-      "name": "??ÎŞ¾¡×ÊÔ´1",
+      "name": "ğŸ¬æ— å°½èµ„æº1",
       "api": "https://api.wujinapi.com/api.php/provide/vod",
       "detail": "https://wujinzy.com"
     },
     "xsd_sdzyapi": {
-      "name": "??Ë÷Äá×ÊÔ´",
+      "name": "ğŸ¬ç´¢å°¼èµ„æº",
       "api": "https://suoniapi.com/api.php/provide/vod",
       "detail": "https://suonizy.net"
     },
     "kuaichezy": {
-      "name": "??¿ì³µ×ÊÔ´",
+      "name": "ğŸ¬å¿«è½¦èµ„æº",
       "api": "https://caiji.kuaichezy.org/api.php/provide/vod",
       "detail": "https://kuaichezy.com"
     },
     "shandian": {
-      "name": "??ÉÁµç×ÊÔ´",
+      "name": "ğŸ¬é—ªç”µèµ„æº",
       "api": "https://xsd.sdzyapi.com/api.php/provide/vod",
       "detail": "https://shandianzy.com"
     },
     "xinlangapi": {
-      "name": "??ĞÂÀË×ÊÔ´",
+      "name": "ğŸ¬æ–°æµªèµ„æº",
       "api": "https://api.xinlangapi.com/xinlangapi.php/provide/vod",
       "detail": "https://xinlangapi.com"
     },
     "wwzy": {
-      "name": "??ÍúÍú¶Ì¾ç",
+      "name": "ğŸ¬æ—ºæ—ºçŸ­å‰§",
       "api": "https://wwzy.tv/api.php/provide/vod",
       "detail": "https://wwzy.tv"
     },
     "apiwwzy": {
-      "name": "??ÍúÍú×ÊÔ´",
+      "name": "ğŸ¬æ—ºæ—ºèµ„æº",
       "api": "https://api.wwzy.tv/api.php/provide/vod",
       "detail": "https://api.wwzy.tv"
     },
     "hhzyapi": {
-      "name": "??ºÀ»ª×ÊÔ´",
+      "name": "ğŸ¬è±ªåèµ„æº",
       "api": "https://hhzyapi.com/api.php/provide/vod",
       "detail": "https://www.haohuazy.com"
     },
     "subocaiji": {
-      "name": "??ËÙ²¥×ÊÔ´",
+      "name": "ğŸ¬é€Ÿæ’­èµ„æº",
       "api": "https://subocaiji.com/api.php/provide/vod",
       "detail": "www.subozy.com"
     },
     "huyaapi": {
-      "name": "??»¢ÑÀ×ÊÔ´",
+      "name": "ğŸ¬è™ç‰™èµ„æº",
       "api": "https://www.huyaapi.com/api.php/provide/vod/at/json",
       "detail": "https://www.huyaapi.com"
     },
     "jinyingzy": {
-      "name": "??½ğÓ¥µã²¥",
+      "name": "ğŸ¬é‡‘é¹°ç‚¹æ’­",
       "api": "https://jinyingzy.com/api.php/provide/vod",
       "detail": "https://jinyingzy.com"
     },
     "jyzyapi": {
-      "name": "??½ğÓ¥×ÊÔ´",
+      "name": "ğŸ¬é‡‘é¹°èµ„æº",
       "api": "https://jyzyapi.com/provide/vod/from/jinyingyun/at/json",
       "detail": "https://jinyingzy.net"
     },
     "p2100": {
-      "name": "??Æ®Áã×ÊÔ´",
+      "name": "ğŸ¬é£˜é›¶èµ„æº",
       "api": "https://p2100.net/api.php/provide/vod",
       "detail": "https://p2100.net"
     },
     "uku": {
-      "name": "??U¿á×ÊÔ´",
+      "name": "ğŸ¬Ué…·èµ„æº",
       "api": "https://jjpz.hafrey.dpdns.org/?url=https://api.ukuapi.com/api.php/provide/vod",
       "detail": "https://api.ukuapi.com"
     },
     "ukuapi88": {
-      "name": "??U¿á88",
+      "name": "ğŸ¬Ué…·88",
       "api": "https://jjpz.hafrey.dpdns.org/?url=https://api.ukuapi88.com/api.php/provide/vod",
       "detail": "https://api.ukuapi88.com"
     },
     "guangsuapi": {
       "api": "https://api.guangsuapi.com/api.php/provide/vod",
-      "name": "??¹âËÙ×ÊÔ´",
+      "name": "ğŸ¬å…‰é€Ÿèµ„æº",
       "detail": "https://api.guangsuapi.com"
     },
     "hongniuzy": {
-      "name": "??ºìÅ£×ÊÔ´",
+      "name": "ğŸ¬çº¢ç‰›èµ„æº",
       "api": "https://www.hongniuzy2.com/api.php/provide/vod",
       "detail": "https://www.hongniuzy.com"
     },
     "modu": {
-      "name": "??Ä§¶¼¶¯Âş",
+      "name": "ğŸ¬é­”éƒ½åŠ¨æ¼«",
       "api": "https://caiji.moduapi.cc/api.php/provide/vod",
       "detail": "https://caiji.moduapi.cc"
     },
     "yyzyw": {
-      "name": "??Ñ¼Ñ¼×ÊÔ´",
+      "name": "ğŸ¬é¸­é¸­èµ„æº",
       "api": "https://cj.yayazy.net/api.php/provide/vod",
       "detail": "https://yayazy3.com"
     },
     "shzy": {
-      "name": "??É½º£×ÊÔ´",
+      "name": "ğŸ¬å±±æµ·èµ„æº",
       "api": "https://zy.sh0o.cn/api.php/provide/vod",
       "detail": "https://zy.sh0o.cn"
     },
     "jazy": {
-      "name": "??½¨°²×ÊÔ´",
+      "name": "ğŸ¬å»ºå®‰èµ„æº",
       "api": "http://154.219.117.232:9981/jacloudapi.php/provide/vod",
       "detail": "http://154.219.117.232:9981"
     },
     "/91md.me": {
-      "name": "??91Âé¶¹",
+      "name": "ğŸ”91éº»è±†",
       "api": "https://91md.me/api.php/provide/vod",
       "detail": "https://91md.me"
     },
     "lbapiby": {
-      "name": "??AIvin",
+      "name": "ğŸ”AIvin",
       "api": "http://lbapiby.com/api.php/provide/vod",
       "detail": "http://lbapiby.com"
     },
     "bwzy2": {
-      "name": "??°ÙÍò×ÊÔ´",
+      "name": "ğŸ”ç™¾ä¸‡èµ„æº",
       "api": "https://api.bwzyz.com/api.php/provide/vod",
       "detail": "https://api.bwzym3u8.com"
     },
     "souavzy": {
-      "name": "??souavZY",
+      "name": "ğŸ”souavZY",
       "api": "https://api.souavzy.vip/api.php/provide/vod",
       "detail": "https://api.souavzy.vip"
     },
     "155zy": {
-      "name": "??155×ÊÔ´",
+      "name": "ğŸ”155èµ„æº",
       "api": "https://155api.com/api.php/provide/vod",
       "detail": "https://155zy2.com"
     },
     "apiyutu": {
-      "name": "??ÓñÍÃ×ÊÔ´",
+      "name": "ğŸ”ç‰å…”èµ„æº",
       "api": "https://apiyutu.com/api.php/provide/vod",
       "detail": "https://apiyutu.com"
     },
     "afhapi9": {
-      "name": "??·¬ºÅ×ÊÔ´",
+      "name": "ğŸ”ç•ªå·èµ„æº",
       "api": "http://fhapi9.com/api.php/provide/vod",
       "detail": "http://fhapi9.com"
     },
     ".kxgav": {
-      "name": "??°×æÎ×ÊÔ´",
+      "name": "ğŸ”ç™½å«–èµ„æº",
       "api": "https://www.kxgav.com/api/json.php",
       "detail": "https://www.kxgav.com"
     },
     "jingpinx": {
-      "name": "??¾«Æ·×ÊÔ´",
+      "name": "ğŸ”ç²¾å“èµ„æº",
       "api": "https://www.jingpinx.com/api.php/provide/vod",
       "detail": "https://www.jingpinx.com"
     },
     "apilsbzy1": {
-      "name": "??ÀÏÉ«±Æ",
+      "name": "ğŸ”è€è‰²é€¼",
       "api": "https://apilsbzy1.com/api.php/provide/vod",
       "detail": "https://apilsbzy1.com"
     },
     "thzy": {
-      "name": "??ÌÒ»¨×ÊÔ´",
+      "name": "ğŸ”æ¡ƒèŠ±èµ„æº",
       "api": "https://thzy1.me/api.php/provide/vod",
       "detail": "https://thzy8.me"
     },
     "yyzy": {
-      "name": "??ÓÅÓÅ×ÊÔ´",
+      "name": "ğŸ”ä¼˜ä¼˜èµ„æº",
       "api": "https://www.yyzywcj.com/api.php/provide/vod",
       "detail": "https://www.yyzywcj.com"
     },
     "xjzy": {
-      "name": "??Ğ¡¼¦×ÊÔ´",
+      "name": "ğŸ”å°é¸¡èµ„æº",
       "api": "https://api.xiaojizy.live/provide/vod",
       "detail": "https://xiaojizy.live"
     },
     ".pgxdy": {
-      "name": "??»ÆAVZY",
+      "name": "ğŸ”é»„AVZY",
       "api": "https://www.pgxdy.com/api/json.php",
       "detail": "https://www.pgxdy.com"
     },
     "hsckzy": {
-      "name": "??»ÆÉ«²Ö¿â",
+      "name": "ğŸ”é»„è‰²ä»“åº“",
       "api": "https://hsckzy.xyz/api.php/provide/vod",
       "detail": "hsckzy.xyz"
     },
     "dnzzy": {
-      "name": "??´óÄÌ×Ó",
+      "name": "ğŸ”å¤§å¥¶å­",
       "api": "https://apidanaizi.com/api.php/provide/vod",
       "detail": "https://apidanaizi.com"
     },
     "xxbzy": {
-      "name": "??Ï¸°û×ÊÔ´",
+      "name": "ğŸ”ç»†èƒèµ„æº",
       "api": "https://www.xxibaozyw.com/api.php/provide/vod",
       "detail": "https://www.xxibaozyw.com"
     },
     "jkunaklmzy": {
-      "name": "??jkun×ÊÔ´",
+      "name": "ğŸ”jkunèµ„æº",
       "api": "https://jkunzyapi.com/api.php/provide/vod",
       "detail": "https://jkunzyapi.com"
     },
     "xbzy": {
-      "name": "??ĞÓ°É×ÊÔ´",
+      "name": "ğŸ”æå§èµ„æº",
       "api": "https://xingba111.com/api.php/provide/vod",
       "detail": "https://xingba111.com"
     },
     "api.sexnguon": {
-      "name": "??É«ÄÏ¹ú",
+      "name": "ğŸ”è‰²å—å›½",
       "api": "https://api.sexnguon.com/api.php/provide/vod",
       "detail": "https://api.sexnguon.com"
     },
     "lbapi9": {
-      "name": "??ÀÖ²¥×ÊÔ´",
+      "name": "ğŸ”ä¹æ’­èµ„æº",
       "api": "https://lbapi9.com/api.php/provide/vod",
       "detail": "https://lbapi9.com"
     },
     "msnii": {
-      "name": "??ÃÀÉÙÅ®",
+      "name": "ğŸ”ç¾å°‘å¥³",
       "api": "https://www.msnii.com/api/json.php",
       "detail": "https://www.msnii.com"
     },
     "aosikazy": {
-      "name": "??°ÂË¹¿¨",
+      "name": "ğŸ”å¥¥æ–¯å¡",
       "api": "https://aosikazy.com/api.php/provide/vod",
       "detail": "https://aosikazy.com"
     },
     "Naixxzy": {
-      "name": "??ÄÌÏã×ÊÔ´",
+      "name": "ğŸ”å¥¶é¦™èµ„æº",
       "api": "https://Naixxzy.com/api.php/provide/vod",
       "detail": "https://Naixxzy.com"
     },
     "slapibf": {
-      "name": "??É­ÁÖ×ÊÔ´",
+      "name": "ğŸ”æ£®æ—èµ„æº",
       "api": "https://beiyong.slapibf.com/api.php/provide/vod",
       "detail": "https://slapibf.com"
     },
     "semaozy": {
-      "name": "??É«Ã¨×ÊÔ´",
+      "name": "ğŸ”è‰²çŒ«èµ„æº",
       "api": "https://caiji.semaozy.net/inc/apijson_vod.php/provide/vod",
       "detail": "https://semaozy1.com"
     },
     "apilj.com": {
-      "name": "??À±½·×ÊÔ´",
+      "name": "ğŸ”è¾£æ¤’èµ„æº",
       "api": "https://apilj.com/api.php/provide/vod",
       "detail": "https://apilj.com"
     },
     "shayuapi": {
-      "name": "??öèÓã×ÊÔ´",
+      "name": "ğŸ”é²¨é±¼èµ„æº",
       "api": "https://shayuapi.com/api.php/provide/vod",
       "detail": "https://shayuapi.com"
     },
     "xzybb21": {
-      "name": "??ĞÒ×ÊÔ´",
+      "name": "ğŸ”å¹¸èµ„æº",
       "api": "https://xzybb2.com/api.php/provide/vod",
       "detail": "https://xzytv.com"
     },
     "dadiapi": {
-      "name": "??´óµØ×ÊÔ´",
+      "name": "ğŸ”å¤§åœ°èµ„æº",
       "api": "https://dadiapi.com/feifei2",
       "detail": "https://dadizy11.com"
     },
     "zuiseapi": {
-      "name": "??×îÉ«×ÊÔ´",
+      "name": "ğŸ”æœ€è‰²èµ„æº",
       "api": "https://api.zuiseapi.com/api.php/provide/vod",
       "detail": "https://zuisezy.com"
     },
     "douapi": {
-      "name": "??¶¹¶¹×ÊÔ´",
+      "name": "ğŸ”è±†è±†èµ„æº",
       "api": "https://api.douapi.cc/api.php/provide/vod",
       "detail": "https://doudouzy.com"
     },
     "xzybb2": {
-      "name": "??µÎµÎ×ÊÔ´",
+      "name": "ğŸ”æ»´æ»´èµ„æº",
       "api": "https://api.ddapi.cc/api.php/provide/vod",
       "detail": "https://didizy.com"
     },
     "swzy": {
-      "name": "??Ë¿Íà×ÊÔ´",
+      "name": "ğŸ”ä¸è¢œèµ„æº",
       "api": "https://siwazyw.tv/api.php/provide/vod/at/json",
       "detail": "https://siwazyw.tv"
     }
